# isos

./: .clang-format  .gitignore  LICENSE  Makefile  flake.nix  hllvm.cabal  isos.cabal
.github/workflows/: test.yml
app/: Generate.hs  Lir.hs  Main.hs  fac.h  ops.cpp  rt.c  rt.h  state.cpp  state.h  test.cpp
rt/: rt.c
