cabal-version: 3.0
name:          isos
version:       0.1.0.0
license:       MIT
license-file:  LICENSE
author:        William McPherson
maintainer:    willmcpherson2@gmail.com
build-type:    Simple

common common
  default-language:   GHC2024
  default-extensions:
    DuplicateRecordFields
    OverloadedLists
    OverloadedRecordDot
    OverloadedStrings
    QuasiQuotes
    TemplateHaskell

  ghc-options:        -Wall
  cc-options:         -Wall

executable isos
  import:          common
  main-is:         Main.hs
  hs-source-dirs:  app
  other-modules:
    Generate
    Lir

  build-depends:
    , base          ^>=4.20.0.0
    , inline-c-cpp  ^>=0.5.0.2
    , vector        ^>=0.13.1.0

  c-sources:
    app/ops.cpp
    app/state.cpp

  extra-libraries: LLVM-19
